added docker support
Update Docker and project configurations for gRPC services

- Updated `.dockerignore` to exclude unnecessary files.
- Modified `.gitignore` to ignore backup files with `.bak` extension.
- Created/modified `GrpcGreeter.sln` to define solution structure with `GrpcGreeter` and `GrpcGreeterClient`.
- Added/updated `Dockerfile` for multi-stage builds of both projects.
- Updated `GrpcGreeter.csproj` with `UserSecretsId` and `DockerDefaultTargetOS`.
- Modified `launchSettings.json` to include profiles for HTTP, HTTPS, and Docker execution.
- Added package reference for `Microsoft.VisualStudio.Azure.Containers.Tools.Targets` in both project files.

--- a/GrpcGreeter/GrpcGreeter.csproj
+++ b/GrpcGreeter/GrpcGreeter.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>88ab717f-511c-49c8-a73e-212bc9734838</UserSecretsId>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
 </Project>
